--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="CSS/w3.css">
+<link rel="stylesheet" href="w3.css">
 <body>
 <p>
 <div class="w3-container">
